--- a/webapp/src/components/onboardingTour/manageCategories/manageCategories.scss
+++ b/webapp/src/components/onboardingTour/manageCategories/manageCategories.scss
@@ -7,4 +7,9 @@
     .tutorial-tour-tip__overlay {
         cursor: pointer;
     }
+
+    .tutorial-tour-tip__footer {
+        margin-top: 15px;
+    }
+
 }
