Updating sidebar UI

--- a/webapp/src/components/table/table.scss
+++ b/webapp/src/components/table/table.scss
@@ -91,7 +91,7 @@
         }
 
         &.expanded {
-            .CompassIcon {
+            .icon-menu-down {
                 transform: rotate(270deg);
             }
         }
