--- a/webapp/src/components/table/tableRow.scss
+++ b/webapp/src/components/table/tableRow.scss
@@ -10,7 +10,7 @@
             text-transform: uppercase;
             font-weight: 600;
             color: rgba(var(--center-channel-color-rgb), 0.64);
-            background-color: rgba(var(--center-channel-color-rgb), 0.1);
+            background-color: rgb(var(--center-channel-bg-rgb));
             box-shadow: rgba(var(--center-channel-color-rgb), 0.1) 0 0 0 1px,
                 rgba(var(--center-channel-color-rgb), 0.1) 0 2px 4px;
             height: 24px;
