Added role so that the non-admin will not be able to unlink the board from rhs

--- a/mattermost-plugin/webapp/src/components/rhsChannelBoardItem.scss
+++ b/mattermost-plugin/webapp/src/components/rhsChannelBoardItem.scss
@@ -33,4 +33,11 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
     }
+
+    .non-admin-unlink-board {
+        cursor: not-allowed;
+        pointer-events: none;
+        opacity: 0.4;
+    }
+
 }
