--- a/webapp/src/components/createCategory/createCategory.scss
+++ b/webapp/src/components/createCategory/createCategory.scss
@@ -10,7 +10,7 @@
         .CreateCategory {
             display: flex;
             flex-direction: column;
-            padding: 0 32px 24px 32px;
+            padding: 0 32px 24px;
             gap: 24px;
 
             .inputWrapper {
