--- a/webapp/src/components/searchDialog/searchDialog.scss
+++ b/webapp/src/components/searchDialog/searchDialog.scss
@@ -32,6 +32,9 @@
         display: flex;
         flex-direction: column;
         height: 100%;
+        border-color: rgba(var(--center-channel-color-rgb), 0.16);
+        background: var(--center-channel-bg);
+        color: var(--center-channel-color);
 
         .head {
             margin-top: 6px;
@@ -58,7 +61,7 @@
                 padding: 0 32px;
                 cursor: pointer;
                 overflow: hidden;
-              
+
                 &.freesize {
                     height: unset;
                 }
@@ -127,7 +130,7 @@
                 position: absolute;
                 left: 13px;
                 font-size: 18px;
-                top: 12px;
+                top: 14px;
                 width: 20px;
                 height: 20px;
                 opacity: 0.48;
