--- a/webapp/src/components/kanban/kanbanCard.scss
+++ b/webapp/src/components/kanban/kanbanCard.scss
@@ -1,21 +1,26 @@
 .KanbanCard {
-    flex: 0 0 auto;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    overflow-wrap: anywhere;
 
-    border-radius: 3px;
-    margin-bottom: 10px;
-    padding: 12px 16px;
-    box-shadow: rgba(var(--center-channel-color-rgb), 0.1) 0 0 0 1px,
+
+    .kanbanCardInnerWrapper {
+        flex: 0 0 auto;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        overflow-wrap: anywhere;
+
+        border-radius: 3px;
+        margin-bottom: 10px;
+        padding: 12px 16px;
+        box-shadow: rgba(var(--center-channel-color-rgb), 0.1) 0 0 0 1px,
         rgba(var(--center-channel-color-rgb), 0.1) 0 2px 4px;
 
-    cursor: pointer;
-    color: rgb(var(--center-channel-color-rgb));
+        cursor: pointer;
+        color: rgb(var(--center-channel-color-rgb));
 
-    transition: background 100ms ease-out 0s;
+        transition: background 100ms ease-out 0s;
+
+    }
 
     &:hover {
         background-color: rgba(var(--center-channel-color-rgb), 0.08);
@@ -94,5 +99,13 @@
             -webkit-line-clamp: 5;
             -webkit-box-orient: vertical; // stylelint-disable-line
         }
+    }
+
+    .pseudoDragPlaceholder {
+        width: 100%;
+        height: 140px;
+        margin-bottom: 18px;
+        border-radius: 5px;
+        background-color: rgba(128, 192, 255, 0.4);
     }
 }
