--- a/webapp/src/components/dialog.scss
+++ b/webapp/src/components/dialog.scss
@@ -15,7 +15,7 @@
         position: fixed;
         width: 100%;
         height: 100%;
-        background-color: rgba(0,0,0,0.65);
+        background-color: rgba(0, 0, 0, 0.65);
     }
 
     .wrapper {
