--- a/webapp/src/components/searchDialog/searchDialog.scss
+++ b/webapp/src/components/searchDialog/searchDialog.scss
@@ -127,10 +127,11 @@
                 position: absolute;
                 left: 13px;
                 font-size: 18px;
-                top: 14px;
                 width: 20px;
-                height: 20px;
+                height: 100%;
                 opacity: 0.48;
+                display: flex;
+                align-items: center;
             }
 
             .searchQuery {
