Updated the cursor css for markdown and updated test case

--- a/mattermost-plugin/webapp/src/components/rhsChannelBoardItem.scss
+++ b/mattermost-plugin/webapp/src/components/rhsChannelBoardItem.scss
@@ -38,5 +38,10 @@
         -webkit-line-clamp: 3;
         -webkit-box-orient: vertical;
         overflow: hidden;
+        cursor: pointer;
+
+        .MarkdownEditor {
+            cursor: pointer;
+        }
     }
 }
