--- a/webapp/src/components/blocksEditor/devmain.scss
+++ b/webapp/src/components/blocksEditor/devmain.scss
@@ -1,29 +1,28 @@
-.App {
-}
-
-h1, h2, h3, p {
+h1,
+h2,
+h3,
+p {
     margin: 5px;
 }
 
 .App-header {
-  padding: 20px 100px;
-  color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  background-color: white;
+    padding: 20px 100px;
+    color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
 }
