--- a/webapp/src/components/blocksEditor/editor.scss
+++ b/webapp/src/components/blocksEditor/editor.scss
@@ -6,19 +6,22 @@
     .RootInput {
         display: block;
     }
+
     &.with-content-type {
         .RootInput {
             display: none;
         }
     }
+
     input {
         width: 100%;
         border: 1px solid hsl(0, 0%, 80%);
         border-radius: 4px;
         padding: 3px 6px;
         outline: 0;
+
         &:focus {
-            border: 2px solid #2684FF;
+            border: 2px solid #2684ff;
         }
     }
 }
