--- a/webapp/src/components/searchDialog/searchDialog.scss
+++ b/webapp/src/components/searchDialog/searchDialog.scss
@@ -13,14 +13,11 @@
     .BoardSwitcherDialogBody {
         display: flex;
         flex-direction: column;
-        height: 100%;
+        flex: 1;
+        overflow: hidden;
         border-color: rgba(var(--center-channel-color-rgb), 0.16);
         background: var(--center-channel-bg);
         color: var(--center-channel-color);
-
-        .head {
-            margin-top: 6px;
-        }
 
         .head,
         .searchResults {
@@ -31,8 +28,7 @@
             height: 100%;
             overflow-y: auto;
             overflow-x: hidden;
-            padding: 16px 0 0;
-            margin-bottom: 18px;
+            padding: 16px 0;
             border-top: solid 1px rgba(var(--center-channel-color-rgb), 0.16);
 
             .searchResult {
@@ -93,20 +89,10 @@
             }
         }
 
-        .text-heading1 {
-            font-size: 12px !important;
-        }
-
-        h5 {
-            font-size: 12px;
-            margin-top: 0;
-        }
-
         .queryWrapper {
             position: relative;
             display: flex;
             flex-direction: row;
-            margin-top: 24px;
 
             .MagnifyIcon {
                 position: absolute;
