--- a/webapp/src/components/dialog.scss
+++ b/webapp/src/components/dialog.scss
@@ -17,14 +17,9 @@
         line-height: 28px;
     }
 
-    .dialog-title--with-subtitle {
-        margin-bottom: 8px;
-        font-size: 20px;
-    }
-
     .dialog-subtitle {
         font-size: 12px;
-        margin: 0;
+        margin-top: 8px;
     }
 
     .dialog__close {
