--- a/webapp/src/components/dialog.scss
+++ b/webapp/src/components/dialog.scss
@@ -103,7 +103,7 @@
             }
         }
 
-        > .toolbar {
+        .toolbar {
             display: flex;
             flex-direction: row;
             padding: 24px 32px;
