Read only and fetching playbooks to select the playbooks

--- a/webapp/src/components/boardTemplateSelector/boardTemplateSelector.scss
+++ b/webapp/src/components/boardTemplateSelector/boardTemplateSelector.scss
@@ -1,5 +1,13 @@
 @import '../../styles/z-index';
 
+.selectPlaybooks {
+    min-width: 300px;
+
+    & > div {
+        min-height: 40px;
+    }
+}
+
 .BoardTemplateSelector {
     @include z-index(board-template-selector);
     position: absolute;
