--- a/webapp/src/widgets/icons/delete.scss
+++ b/webapp/src/widgets/icons/delete.scss
@@ -3,4 +3,8 @@
     stroke: none;
     width: 24px;
     height: 24px;
+
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
