--- a/webapp/src/components/boardTemplateSelector/boardTemplateSelector.scss
+++ b/webapp/src/components/boardTemplateSelector/boardTemplateSelector.scss
@@ -1,7 +1,8 @@
 @import '../../styles/z-index';
 
 .selectPlaybooks {
-    min-width: 300px;
+    max-width: 300px;
+    width: 100%;
 
     & > div {
         min-height: 40px;
