--- a/webapp/src/components/boardTemplateSelector/boardTemplateSelector.scss
+++ b/webapp/src/components/boardTemplateSelector/boardTemplateSelector.scss
@@ -9,6 +9,18 @@
     }
 }
 
+.template-smart {
+    padding: 2px 6px;
+    border-radius: 9999999999px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(63, 67, 80, 0.56);
+    color: rgba(255, 255, 255, 1);
+    font-size: 10px;
+    font-weight: 600;
+}
+
 .BoardTemplateSelector {
     @include z-index(board-template-selector);
     position: absolute;
