--- a/webapp/src/components/boardTemplateSelector/boardTemplateSelectorItem.scss
+++ b/webapp/src/components/boardTemplateSelector/boardTemplateSelectorItem.scss
@@ -46,5 +46,17 @@
         display: none;
         right: -8px;
     }
+
+    .template-smart {
+        padding: 2px 6px;
+        border-radius: 9999999999px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        background: rgba(63, 67, 80, 0.56);
+        color: rgba(255, 255, 255, 1);
+        font-size: 10px;
+        font-weight: 600;
+    }
 }
 
