--- a/webapp/src/components/boardTemplateSelector/boardTemplateSelectorItem.scss
+++ b/webapp/src/components/boardTemplateSelector/boardTemplateSelectorItem.scss
@@ -57,6 +57,8 @@
         color: rgba(255, 255, 255, 1);
         font-size: 10px;
         font-weight: 600;
+        margin-left: 10px;
+        line-height: 16px;
     }
 }
 
