--- a/webapp/src/components/shareBoard/shareBoardButton.scss
+++ b/webapp/src/components/shareBoard/shareBoardButton.scss
@@ -30,6 +30,9 @@
     padding: 20px 32px;
     margin-bottom: 16px;
     border-bottom: 1px solid rgba(63, 67, 80, 0.08);
+}
+
+.select-container {
     max-width: 536px;
     width: 100%;    
 }
