Migrated to attachment and added deleting property

--- a/webapp/src/components/content/fileElement.scss
+++ b/webapp/src/components/content/fileElement.scss
@@ -40,6 +40,10 @@
         float: right;
     }
 
+    .delete-menu {
+        margin-top: -30px;
+    }
+
     &:hover {
         .fileElement-download-btn {
             display: block;
