--- a/webapp/html-templates/page.ejs
+++ b/webapp/html-templates/page.ejs
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0'>
 
-<head>
-	<meta charset="UTF-8">
-    <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0'>
+        <title>Focalboard</title>
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
+        <script>window.baseURL = '{{.BaseURL}}'</script>
+        <link rel="icon" href="{{.BaseURL}}/static/favicon.svg?v=<%= version %>" />
+    </head>
 
-    <script>window.baseURL = '{{.BaseURL}}'</script>
-    <link rel="icon" href="{{.BaseURL}}/static/favicon.svg?v=1" />
-</head>
-
-<body class="focalboard-body">
-	<div id="focalboard-app">
-	</div>
-
-	<div id="focalboard-root-portal">
-	</div>
-</body>
-
+    <body class="focalboard-body">
+        <div id="focalboard-app"></div>
+        <div id="focalboard-root-portal"></div>
+        <script src="{{.BaseURL}}/static/main.js?v=<%= version %>"></script>
+    </body>
 </html>
