--- a/webapp/src/components/sidebar/sidebarCategory.scss
+++ b/webapp/src/components/sidebar/sidebarCategory.scss
@@ -112,6 +112,10 @@
                 .MenuWrapper {
                     display: block;
                 }
+
+                .badge.newCategoryBadge {
+                    display: none;
+                }
             }
         }
 
