Finally, its done.

--- a/webapp/src/components/sidebar/sidebarCategory.scss
+++ b/webapp/src/components/sidebar/sidebarCategory.scss
@@ -221,4 +221,9 @@
             height: 18px;
         }
     }
+    
+    &.draggingOver {
+        border: 1px solid rgba(var(--sidebar-text-rgb), 1);
+        border-radius: 4px;
+    }
 }
