fix broken table in public read-only view (#4106)

--- a/webapp/src/components/table/table.scss
+++ b/webapp/src/components/table/table.scss
@@ -206,7 +206,7 @@
 
         .Person.octo-propertyvalue,
         .DateRange.octo-propertyvalue {
-            overflow: unset;
+            overflow: hidden;
         }
     }
 
