--- a/webapp/src/properties/person/person.scss
+++ b/webapp/src/properties/person/person.scss
@@ -14,6 +14,7 @@
         display: flex;
         align-items: center;
         color: rgba(var(--center-channel-color-rgb), 1);
+        margin-left: 10px;
 
         img {
             border-radius: 50px;
