--- a/webapp/src/components/centerPanel.scss
+++ b/webapp/src/components/centerPanel.scss
@@ -11,6 +11,7 @@
         display: flex;
         flex-direction: column;
     }
+
 }
 
 
@@ -40,6 +41,10 @@
         }
     }
 
+    > .BlocksEditor {
+        position: relative;
+        right: 30px;
+    }
     > .top-head {
         @include z-index(center-panel);
         position: sticky;
