--- a/webapp/src/properties/person/person.scss
+++ b/webapp/src/properties/person/person.scss
@@ -14,7 +14,6 @@
         display: flex;
         align-items: center;
         color: rgba(var(--center-channel-color-rgb), 1);
-        margin-left: 7px;
 
         img {
             border-radius: 50px;
@@ -22,6 +21,10 @@
             height: 24px;
             margin-right: 6px;
         }
+    }
+
+    .react-select__input {
+        margin-left: -5px !important;
     }
 
     .react-select__menu {
