--- a/webapp/src/components/blocksEditor/editor.scss
+++ b/webapp/src/components/blocksEditor/editor.scss
@@ -15,13 +15,12 @@
 
     input {
         width: 100%;
-        border: 1px solid hsl(0, 0%, 80%);
+        border: 0px;
         border-radius: 4px;
         padding: 3px 6px;
         outline: 0;
-
         &:focus {
-            border: 2px solid #2684ff;
+            outline: 0;
         }
     }
 }
