--- a/webapp/src/components/sidebar/sidebarBoardItem.scss
+++ b/webapp/src/components/sidebar/sidebarBoardItem.scss
@@ -174,6 +174,23 @@
             }
         }
     }
+
+    &:hover {
+        .PageMenu {
+            display: block;
+        }
+    }
+    .PageMenu {
+        display: none;
+
+        .MenuWrapper {
+            .IconButton {
+                font-size: 14px;
+                height: 24px;
+                width: 24px;
+            }
+        }
+    }
 }
 
 .team-sidebar + .product-wrapper {
