--- a/webapp/src/components/sidebar/sidebarBoardItem.scss
+++ b/webapp/src/components/sidebar/sidebarBoardItem.scss
@@ -28,6 +28,33 @@
         fill: rgba(var(--sidebar-text-rgb), 0.64);
         font-weight: 400;
     }
+    &.sidebar-page-item.depth-0 {
+        padding-left: 42px;
+    }
+    &.sidebar-page-item.depth-1 {
+        padding-left: 52px;
+    }
+    &.sidebar-page-item.depth-2 {
+        padding-left: 62px;
+    }
+    &.sidebar-page-item.depth-3 {
+        padding-left: 72px;
+    }
+    &.sidebar-page-item.depth-4 {
+        padding-left: 82px;
+    }
+    &.sidebar-page-item.depth-5 {
+        padding-left: 92px;
+    }
+    &.sidebar-page-item.depth-6 {
+        padding-left: 102px;
+    }
+    &.sidebar-page-item.depth-7 {
+        padding-left: 112px;
+    }
+    &.sidebar-page-item.depth-8 {
+        padding-left: 122px;
+    }
 
     &.active {
         background: rgba(var(--sidebar-text-rgb), 0.1);
