--- a/webapp/src/components/boardTemplateSelector/boardTemplateSelector.scss
+++ b/webapp/src/components/boardTemplateSelector/boardTemplateSelector.scss
@@ -105,7 +105,7 @@
             position: absolute;
             right: 0;
             top: 0;
-            padding: 32px;
+            padding: 32px 16px 0;
             background-color: rgb(var(--center-channel-bg-rgb));
         }
 
