Other small fixes

--- a/webapp/src/components/centerPanelPages.scss
+++ b/webapp/src/components/centerPanelPages.scss
@@ -74,6 +74,7 @@
             }
         }
         > .properties {
+            @include z-index(center-panel);
             display: flex;
             width: 768px;
             flex-wrap: wrap;
