Fixing drag and drop of blocks in root pages

--- a/webapp/src/components/centerPanelPages.scss
+++ b/webapp/src/components/centerPanelPages.scss
@@ -132,6 +132,10 @@
                 margin-left: 16px;
                 width: 100%;
             }
+            > .properties {
+                margin-left: 16px;
+                width: 100%;
+            }
         }
     }
     > .top-head {
