Added the status for upload

--- a/webapp/src/components/content/attachmentElement.scss
+++ b/webapp/src/components/content/attachmentElement.scss
@@ -21,6 +21,13 @@
         color: rgb(var(--center-channel-color-rgb));
     }
 
+    .fileElement-file-uploading {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 16px;
+        color: rgb(var(--center-channel-color-rgb));
+    }
+
     .fileElement-icon-division {
         margin-top: 8px;
     }
