--- a/webapp/src/components/boardTemplateSelector/boardTemplateSelector.scss
+++ b/webapp/src/components/boardTemplateSelector/boardTemplateSelector.scss
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: center;
 
-    @media (max-height: 1024px) {
+    @media (max-height: 900) {
         padding: 80px;
     }
 }
