--- a/webapp/src/components/centerPanelPages.scss
+++ b/webapp/src/components/centerPanelPages.scss
@@ -56,6 +56,9 @@
             .pages-breadcrumbs {
                 flex-grow: 1;
             }
+            .page-breadcrumb {
+                cursor: pointer;
+            }
         }
 
         >.BlocksEditor {
