--- a/webapp/src/components/centerPanelPages.scss
+++ b/webapp/src/components/centerPanelPages.scss
@@ -20,7 +20,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 48px;
     overflow: auto;
 
     >* {
@@ -162,7 +161,7 @@
     }
 
     >.top-head {
-        @include z-index(center-panel);
+        @include z-index(modal-permissions-label);
         width: 100%;
         position: sticky;
         top: 0;
@@ -212,7 +211,7 @@
 
 
     >div:nth-child(2) {
-        padding: 0 32px;
+        padding: 0 32px 48px;
 
         @media (max-width: 768px) {
             margin-left: 0;
