Download and CSS fixes

--- a/webapp/src/components/content/attachmentElement.scss
+++ b/webapp/src/components/content/attachmentElement.scss
@@ -46,6 +46,7 @@
         &:hover {
             background-color: rgba(var(--center-channel-color-rgb), 0.08);
             border-radius: 5px;
+            cursor: pointer;
         }
     }
 
