Updating focalboard website

--- a/website/site/layouts/partials/head.html
+++ b/website/site/layouts/partials/head.html
@@ -17,6 +17,9 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;700&family=Noto+Sans:wght@300;400&display=swap" rel="stylesheet">
 
+<!-- Lottie player -->
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 <!-- CSS  -->
 <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/tabs.css" | absURL }}">
