--- a/website/site/layouts/index.html
+++ b/website/site/layouts/index.html
@@ -6,13 +6,25 @@
 <html>
     <head>
         {{ partial "head.html" .}}
+        <script src="https://cdn.jsdelivr.net/gh/kevinbatdorf/alpine-auto-interval@0.x.x/dist/index.js"></script>
         <script defer src="https://unpkg.com/alpinejs@3.10.5/dist/cdn.min.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     </head>
-    <body class="homepage" x-data='{template: 1, boardView: 1, roadmapItem: 1}'>
+    <body
+        class="homepage"
+        x-data='{
+            template: 1,
+            boardView: 1,
+            roadmapItem: 1,
+            viewsInterval: null,
+            roadmapInterval: null,
+        }'
+        x-init='viewsInterval = setInterval(function () {boardView > 3 ? boardView = 1 : boardView++}, 3000); roadmapInterval = setInterval(function () {roadmapItem > 2 ? roadmapItem = 1 : roadmapItem++}, 3000);'
+    >
         {{ partial "nav.html" .}}
+
 
         <div id="wrapper">
             {{ partial "hero.html" .}}
@@ -25,6 +37,16 @@
         {{ partial "footer.html" .}}
 
         <script>
+            document.addEventListener('alpine:init', () => {
+                Alpine.data('dropdown', () => ({
+                    open: false,
+
+                    toggle() {
+                        this.open = ! this.open
+                    }
+                }))
+            })
+
             AOS.init();
 
             AOS.init({
