Updating docs pages

--- a/website/site/layouts/partials/hero.html
+++ b/website/site/layouts/partials/hero.html
@@ -3,7 +3,7 @@
 		<div class="homepage-intro__text" data-aos="fade-left">
             <div class="focalboard-tag">Focalboard is now Mattermost Boards <img src="img/bullseye.svg" alt=""></div>
 			<h1>
-				Project & Task Management for Software Development Teams
+				Project Management for Software Development Teams
 			</h1>
 			<p>
 				Your open source project management and team collaboration tool. <br>
