--- a/website/site/static/css/partials/blog.css
+++ b/website/site/static/css/partials/blog.css
@@ -13,6 +13,10 @@
     margin-bottom: .6rem;
 }
 
+.doc-content .doc-title {
+    margin-bottom: 24px;
+}
+
 .blog-item__count {
     margin: 0 0 0 5px;
     opacity: .6;
