--- a/website/site/layouts/partials/hero.html
+++ b/website/site/layouts/partials/hero.html
@@ -3,10 +3,9 @@
 		<div class="homepage-intro__text" data-aos="fade-left">
             <div class="focalboard-tag">Focalboard is now Mattermost Boards <img src="img/bullseye.svg" alt=""></div>
 			<h1>
-				Project Management for Software Development Teams
+				Open source project management for <span style='color: #ffbc1f'>developers</span>
 			</h1>
 			<p>
-				Your open source project management and team collaboration tool. <br>
                 Keep everything and everyone on track, all in the Mattermost platform.
 			</p>
 
