--- a/website/site/layouts/partials/nav.html
+++ b/website/site/layouts/partials/nav.html
@@ -15,7 +15,7 @@
                 <li><a class="external" rel="noopener" href="{{ .URL }}">{{ .Name }}</a></li>
             {{ end }}
             <li class='header__feedback'>
-                <a target='_blank' href='https://www.focalboard.com/feedback/'><button class='btn btn-tertiary'>Get started</button></a>
+                <a target='_blank' href='https://www.focalboard.com/feedback/'><button class='btn btn-primary'>Get started</button></a>
             </li>
         </ul>
     </div>
